wrkld/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: icebreaker
spec:
  finalizers:
  - kubernetes
...
