wrkld/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: icebreaker
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: icebreaker
          servicePort: 4000
...
